removed getlast and getfirst from project